--- a/UIP_P05/API/project.json
+++ b/UIP_P05/API/project.json
@@ -4,11 +4,13 @@
   "description": "Bot to automate an API",
   "main": "Main.xaml",
   "dependencies": {
+    "UiPath.AmazonWebServices.Activities": "[2.7.0]",
     "UiPath.Excel.Activities": "[2.23.4]",
     "UiPath.Mail.Activities": "[1.23.1]",
     "UiPath.System.Activities": "[24.10.3]",
     "UiPath.Testing.Activities": "[24.10.0]",
-    "UiPath.UIAutomation.Activities": "[24.10.0]"
+    "UiPath.UIAutomation.Activities": "[24.10.0]",
+    "UiPath.WebAPI.Activities": "[1.21.0]"
   },
   "webServices": [],
   "entitiesStores": [],
