--- a/UIP_P05/API/project.json
+++ b/UIP_P05/API/project.json
@@ -6,8 +6,10 @@
   "dependencies": {
     "UiPath.AmazonWebServices.Activities": "[2.7.0]",
     "UiPath.Excel.Activities": "[2.23.4]",
+    "UiPath.IntegrationService.Activities": "[1.6.0]",
     "UiPath.Mail.Activities": "[1.23.1]",
-    "UiPath.System.Activities": "[24.10.3]",
+    "UiPath.MicrosoftOffice365.Activities": "[2.6.24]",
+    "UiPath.System.Activities": "[24.10.4]",
     "UiPath.Testing.Activities": "[24.10.0]",
     "UiPath.UIAutomation.Activities": "[24.10.0]",
     "UiPath.WebAPI.Activities": "[1.21.0]"
